# displacement

./: .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .gitignore  .gitpod.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: .dependabot.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  wasm.yml  web.yml
.storybook/: main.js  preview.js
cwasm/: compile.sh  main.cpp
netlify/: .gitignore  package-lock.json  package.json
public/: e.out.wasm  f.out.wasm  manifest.json
src/: constants.ts  wasm.d.ts
src/components/: BackgroundBrightnessOption.tsx  BottomBarSection.tsx  Button.stories.tsx  Button.tsx  Canvas.tsx  CanvasContainer.tsx  CanvasSection.tsx  Header.tsx  IterationsOption.tsx  Layout.tsx  Option.tsx  Options.tsx  RenderAction.tsx  SectionsContainer.tsx  SettingsSection.tsx  WASMExample.tsx
src/context/: CanvasContext.tsx  RendererContext.tsx  Size.tsx  WASM.tsx  WASMContext.tsx  WASMWorkerContext.tsx
src/graphics/: GraphicsManager.ts  Renderer.ts  index.ts  types.d.ts  uniforms.ts
src/pages/: _app.tsx  _document.tsx  _offline.tsx  index.tsx
src/state/: index.ts  recoilKeys.ts
src/stories/: Button.tsx
src/styles/: globals.css  inter.css
src/types-global/: WASM.d.ts  worker-extensions.d.ts
src/utils/: calcAspectRatio.ts  clamp.ts  (+5 more)
wasm/: Cargo.toml  rs-fmt.sh  rs-lint.sh
wasm/src/: lib.rs
(+33 files in other folders)
