[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
"wasm-bindgen" = "0.2.80"
"rand" = "0.8.5"
"getrandom" = { version = "0.2.6", features = ["js"] } # makes `rand` work for WASM: https://github.com/rust-random/rand#wasm-support
